--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!-- ~~~ ADJUST THIS FAVICON BELOW BRUH ~~~ -->
+		<!-- ~~~ SvelteKit & Pico.css ~~~ -->
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="https://unpkg.com/pico.css/dist/pico.min.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
