--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!-- ~~~ SvelteKit & Pico.css ~~~ -->
+		<!-- ~~~ SvelteKit & Pico.css & OG's ~~~ -->
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="https://unpkg.com/pico.css/dist/pico.min.css" />
+		<meta property="og:title" content="Natural Travel Inspiration" />
+        <meta property="og:description" content="Natural Travel Inspiration" />
+        <meta property="og:image" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
