dash m again with the commitski

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://unpkg.com/pico.css/dist/pico.min.css" />
 		<meta property="og:title" content="Natural Travel Inspiration" />
         <meta property="og:description" content="Natural Travel Inspiration" />
-        <meta property="og:image" content="" />
+        <meta property="og:image" content="https://raw.githubusercontent.com/jonathanschimpf/natural-travel-inspiration/main/static/assets/natural-travel-inspiration_grand-canyon_open-graph.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
