meta property="og:description"

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="https://unpkg.com/pico.css/dist/pico.min.css" />
 		<meta property="og:title" content="Natural Travel Inspiration" />
-        <meta property="og:description" content="Natural Travel Inspiration" />
+        <meta property="og:description" content="You should go outside — Here's some inspiration." />
         <meta property="og:image" content="https://raw.githubusercontent.com/jonathanschimpf/natural-travel-inspiration/main/static/assets/natural-travel-inspiration_grand-canyon_open-graph.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
