--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!-- ~~~ SvelteKit & Pico.css & OG's ~~~ -->
+		<!-- ~~~ SvelteKit & Pico.css & OG's + Normalize~~~ -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="https://unpkg.com/pico.css/dist/pico.min.css" />
 		<meta property="og:title" content="You should go outside — Here's some inspiration." />
